--- a/views/egresosDelMes.ejs
+++ b/views/egresosDelMes.ejs
@@ -102,7 +102,7 @@
   <% }) %>
   <% let resultado = totalegresos.reduce((prev, curr) => prev + curr, 0 )%>
 
-  <p>Total de egresos: $ <span><%= resultado %></span></p>
+  <h6>Total de egresos: $ <span><%= resultado %></span></h6>
 
   <%- include("./fragments/scripts") %>
 </body>
