--- a/views/formNvoIngreso.ejs
+++ b/views/formNvoIngreso.ejs
@@ -29,7 +29,7 @@
           <label for="obsNewMove" class="form-label">Observaciones</label>
         </div>
 
-        <div class="container-btns-ingreso-o-egreso">
+        <div class="container-btns-ingreso-o-egreso no-seleccionable">
           <button type="button" class="cancel-move-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff" class="bi bi-x-circle" viewBox="0 0 16 16" class="svg-cancel-move-btn">
               <path class="path-cancel-move-btn" d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
