--- a/views/fragments/modal.ejs
+++ b/views/fragments/modal.ejs
@@ -14,7 +14,7 @@
       <div class="modal-footer">
         Creado por <a href="https://www.linkedin.com/in/ramiro-c-pezzone-desarrollador-web/" target="_blank" rel="noopener noreferrer">Ramiro</a>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer no-seleccionable">
         <div class="container-add-btn">
           <button type="submit" class="btn-cerrar-modal-about" data-bs-dismiss="modal">
             <span>Cerrar</span>
