--- a/views/fragments/modalInstructivo.ejs
+++ b/views/fragments/modalInstructivo.ejs
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <div class="container-add-btn">
+        <div class="container-add-btn no-seleccionable">
           <button type="submit" class="btn-cerrar-modal-about" data-bs-dismiss="modal">
             <span>Cerrar</span>
           </button>
