--- a/views/fragments/modalInstructivoPanel.ejs
+++ b/views/fragments/modalInstructivoPanel.ejs
@@ -19,7 +19,7 @@
         En el apartado "Egresos" debera registrarse todo movimiento que signifique un egreso del dinero. Debe seleccionarse la categoría correspondiente y el monto. Por ejemplo, si se realizó una compra de alimentos se debería seleccionar la categoría 'Necesidades básicas' -o el nombre que se le haya elegido-, y el monto en cuestión.
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn-cerrar-modal-about" data-bs-dismiss="modal">
+        <button type="submit" class="btn-cerrar-modal-about no-seleccionable" data-bs-dismiss="modal">
           <span>Cerrar</span>
         </button>
       </div>
