--- a/views/main.ejs
+++ b/views/main.ejs
@@ -16,7 +16,7 @@
 
 
   <P>¿Empezamos?</P>
-  <div class="container-btn-comenzar">
+  <div class="container-btn-comenzar no-seleccionable">
     <a class="a-btn-comenzar">
       <button class="btn-comenzar">¡VAMOS!
         <div class="icon-comenzar">
