--- a/views/fragments/modalEdicionDeIngreso.ejs
+++ b/views/fragments/modalEdicionDeIngreso.ejs
@@ -30,7 +30,7 @@
         </div>
         <div class="separador-modal">
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer no-seleccionable">
           <button type="button" class="btn-cancelar-cambios-cat" data-bs-dismiss="modal">
             <span class="span-btn-cancelar-cambios">Cancelar</span>
           </button>
