--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
   <a href="/auth/google" class="link-login">
     <div class="container-link-login">
-      <div class="container-logo-texto">
+      <div class="container-logo-texto no-seleccionable">
         <span>Iniciá sesión con <span><img src="/imgs/google-logo.png" alt="logo Google" class="logo-google-login"></span>oogle</span>
       </div>
     </div>
