--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -13,6 +13,7 @@
   <meta name="image" property="og:image" content="https://res.cloudinary.com/ramiropezzone/image/upload/v1654957017/vista-min-smart-wallet_ajqspu.png">
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="600" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/css/style.css">
