--- a/views/egresosDelMes.ejs
+++ b/views/egresosDelMes.ejs
@@ -10,7 +10,7 @@
   <input type="hidden" value=<%= month %> id="month-hidden" />
   <% } %>
   <% if (order) { %>
-  <input type="hidden" value=<%= order %> id="order-egresos-hidden" class="value-order-hidden"/>
+  <input type="hidden" value=<%= order %> id="order-egresos-hidden" class="value-order-hidden" />
   <% } %>
 
   <select class="form-select egresosMonthSelector selector" aria-label="Selector de mes" name="monthSelector">
@@ -72,13 +72,13 @@
             <% } else {%>
           <td><%= egresos[i].obs %></td>
           <% } %>
-          <td><span id="btnEditarEgreso" onclick="editarEgreso('<%= egresos[i]._id %>', '<%= egresos[i].idCategory %>', '<%= egresos[i].cat %>','<%= egresos[i].value %>', '<%= egresos[i].obs %>')" data-bs-toggle="modal" data-bs-target="#edit-egreso" class="btn-mini-table">
+          <td><span id="btnEditarEgreso" onclick="editarEgreso('<%= egresos[i]._id %>', '<%= egresos[i].idCategory %>', '<%= egresos[i].cat %>','<%= egresos[i].value %>', '<%= egresos[i].month %>', '<%= egresos[i].obs %>')" data-bs-toggle="modal" data-bs-target="#edit-egreso" class="btn-mini-table">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                 <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
               </svg>
             </span></td>
-          <td onclick="eliminarEgreso('<%= egresos[i]._id %>', '<%= egresos[i].cat %>')" class="btnEliminarIngreso">
+          <td onclick="eliminarEgreso('<%= egresos[i]._id %>', '<%= egresos[i].cat %>', '<%= egresos[i].month %>', '<%= egresos[i].value %>')" class="btnEliminarIngreso">
             <a class="btn-mini-table btn-quitar-cat">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
